feat: Add an optional feature to set the keyring directory function
增加一个可选使用的特性，设置keyring目录功能，该特性不影响流程,
这个特性本身跟白盒无关，但白盒用到了这个特性。与自动弹密钥问题相关。
https://pms.uniontech.com/task-view-262399.html

Log: Add an optional feature

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gnome-keyring (40.0-deepin1) stable; urgency=medium
+
+  * Add an optional feature to set the keyring directory function
+
+ -- bluesky <chenchongbiao@deepin.org>  Wed, 02 Aug 2023 16:40:53 +0800
+
 gnome-keyring (40.0-deepin) stable; urgency=medium
 
   * ['Rebuild  against by  current gcc 11.2']
