feat: 增加一个可选使用的特性，设置keyring目录功能
增加一个可选使用的特性，设置keyring目录功能，该特性不影响流程

Log: 增加一个可选使用的特性，设置keyring目录功能
pms: BUG-313655

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gnome-keyring (46.2-1deepin3) unstable; urgency=medium
+
+  * add a feature to specify the working directory
+
+ -- fuleyi <fuleyi@uniontech.com>  Sun, 27 Apr 2025 10:28:36 +0800
+
 gnome-keyring (46.2-1deepin2) unstable; urgency=medium
 
   * disable gnome-keyring-daemon.server. 
