fix: 密码过期时登录界面修改密码导致的问题
正常登录流程是auth->session，密码过期时登录流程是auth->password->session，auth缓存密码，password阶段修改密码失败但却依旧替换了缓存里的密码为新密码。 修复为改密成功才替换。

Log: 密码过期时登录界面修改密码导致的问题
pms: BUG-317435

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gnome-keyring (46.2-1deepin4) unstable; urgency=medium
+
+  * if the password is not successfully modified, do not stash the new password
+
+ -- fuleyi <fuleyi@uniontech.com>  Thu, 10 Jul 2025 14:25:00 +0800
+
 gnome-keyring (46.2-1deepin3) unstable; urgency=medium
 
   * add a feature to specify the working directory
