--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gnome-keyring (46.2-1deepin5) unstable; urgency=medium
+
+  * update tips to unlock login keyring
+
+ -- Liang Bo <liangbo@uniontech.com>  Sat, 31 Jan 2026 14:45:28 +0800
+
 gnome-keyring (46.2-1deepin4) unstable; urgency=medium
 
   * if the password is not successfully modified, do not stash the new password
