--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gnome-keyring (46.2-1deepin6) unstable; urgency=medium
+
+  * Change daemon control file error log to warning level
+
+ -- fuleyi <fuleyi@uniontech.com>  Wed, 04 Feb 2026 11:44:57 +0800
+
 gnome-keyring (46.2-1deepin5) unstable; urgency=medium
 
   * update tips to unlock login keyring
