--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gnome-keyring (46.2-1deepin7) unstable; urgency=medium
+
+  * Ensure the login collection is registered after unlocking
+
+ -- fuleyi <fuleyi@uniontech.com>  Fri, 06 Feb 2026 15:31:49 +0800
+
 gnome-keyring (46.2-1deepin6) unstable; urgency=medium
 
   * Change daemon control file error log to warning level
